Release history for Dist-Zilla-Plugin-Author-KENTNL-RecommendFixes

{{$NEXT}}
 [Checks]
 - Test dist.ini.meta has a syntax vim statement, because vim doesn't autodetect that filetype.

 [Dependencies::Stats]
 - Dependencies changed since 0.003006, see misc/*.deps* for details
 - configure: +1 (recommends: ↑1)
 - develop: +6 ↑1 -1 (recommends: +1, suggests: ↑2)
 - test: +1 (recommends: ↑2)

0.003006 2014-09-27T07:03:04Z
 [Checks]
 - Make sure weaver_ini_ok runs
 - Double-check that -Encoding is not specified.

0.003005 2014-09-25T16:09:00Z
 [Dependencies::Stats]
 - Dependencies changed since 0.003004, see misc/*.deps* for details
 - develop: (suggests: ↑1)

 [Internals]
 - Prototype the input_transform feature discussed.

0.003004 2014-09-22T19:06:39Z
 [Checks]
 - Warn about bad hashtags.

 [Dependencies::Stats]
 - Dependencies changed since 0.003003, see misc/*.deps* for details
 - runtime: +1

 [Internals]
 - Better caching
 - better assertion generator test
 - simplified multi-line test

0.003003 2014-09-21T12:42:45Z
 [Dependencies::Stats]
 - Dependencies changed since 0.003002, see misc/*.deps* for details
 - develop: (suggests: ↑1)
 - runtime: +1 -1

 [Internals]
 - Factor _Path parts into _Assertion and have generic class prototype.
 - Factor _Data parts into _Assertion and have generic class prototype.

0.003002 2014-09-04T19:09:39Z
 [00 Trivial]
 - Dislike copyrights without an email address

 [Dependencies::Stats]
 - Dependencies changed since 0.003001, see misc/*.deps* for details
 - test: (recommends: ↑1)

0.003001 2014-08-30T11:09:05Z
 [00 Trivial]
 - Prefer Sub::Util over Sub::Name

0.003000 2014-08-30T00:17:44Z
 [00 Major]
 - Interals overhauled again
 - new checks
 - metadata

 [Checks]
 - Now scrapes lib/ and t/ and recommends various things for DZil plugin work.
 - author=kentfredric is now warned against.
 - gitversions is now warned against
 - failure to have one of bumpversions or gitversions is a serious warning
 - derecommend Readonly