@@ -4,8 +4,14 @@ This file contains changes in REQUIRED dependencies for standard CPAN phases (co
  [Added / configure requires]
  - perl 5.008
 
+ [Added / runtime requires]
+ - Generic::Assertions
+
  [Added / test requires]
  - perl 5.008
+
+ [Removed / runtime requires]
+ - Carp
 
 0.003006 2014-09-27T07:03:04Z
 
